--- a/homeworks/html-css/week02/style.css
+++ b/homeworks/html-css/week02/style.css
@@ -1,95 +1,119 @@
-
-/* Base styles */
-body {
+body,
+h1,
+h2,
+h3,
+p,
+ul,
+li {
     font-family: Arial, sans-serif;
-    background-color: #F0F0F0;
-    padding: 0;
     margin: 0;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
-}
-
-h1 {
-    font-size: 32px;
-}
-
-main {
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-section {
-    margin-bottom: 20px;
-    padding: 20px;
-}
-
-h2 {
-    font-size: 24px;
-    color: #333;
-}
-
-ul {
-    list-style-type: none;
     padding: 0;
-    margin: 0;
+
+}
+
+#grid-floats {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+
+#grid-floats li:first-child {
+    grid-column: span 2;
 }
 
 .grid-item {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    width: calc(50% - 20px);
-    display: inline-block;
-    box-sizing: border-box;
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 8px;
 }
 
-.grid-item:last-child {
-    margin-right: 0;
-}
-
-img {
+.grid-item img {
     max-width: 100%;
     height: auto;
-    display: block;
+    border-radius: 4px;
 }
 
-p {
-    font-size: 14px;
+.grid-item h3 {
+    color: #333;
 }
 
-/* Media query for larger screens (e.g., desktop) */
-@media (min-width: 1025px) {
-    .grid-item {
-        width: calc(25% - 20px);
+.grid-item p {
+    color: #666;
+    line-height: 1.4;
+}
+
+
+
+@media screen and (max-width: 1024px) {
+    #grid-floats {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    #grid-floats li:first-child {
+        grid-column: auto;
     }
 }
 
-/* Media query for medium-sized screens (e.g., tablets) */
-@media (min-width: 769px) and (max-width: 1024px) {
+#grid-flex {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.grid-item {
+    flex: 1 0 calc(25% - 20px);
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 8px;
+    align-self: flex-start;
+}
+
+.grid-item img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 4px;
+}
+
+.grid-item h3 {
+    color: #333;
+}
+
+.grid-item p {
+    color: #666;
+    line-height: 1.4;
+}
+
+#grid-flex::before {
+    align-items: start;
+    flex: 0 0 calc(25% - 20px);
+}
+
+@media screen and (min-width: 1025px) {
     .grid-item {
-        width: calc(33.3333% - 20px);
+        flex: 1 0 calc(20% - 20px);
     }
 }
 
-/* Media query for smaller screens (e.g., mobile devices) */
-@media (max-width: 768px) {
-    main {
-        padding: 0px;
+@media screen and (min-width: 500px) and (max-width: 1024px) {
+    #grid-floats {
+        grid-template-columns: 1fr;
     }
 
-    .grid-item {
-        width: 100%;
-        margin-right: 0;
+    #grid-floats li:first-child {
+        grid-column: auto;
+        flex: 0 0 calc(50% - 12px);
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #grid-floats {
+        grid-template-columns: 1fr;
+    }
+
+    #grid-floats li:first-child {
+        grid-column: auto;
     }
 }
