--- a/homeworks/html-css/week01/Resume/style.css
+++ b/homeworks/html-css/week01/Resume/style.css
@@ -4,58 +4,66 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-}
-
-.container {
-    max-width: auto;
+  }
+  
+  .container {
+    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-}
-
-h1,
-h2 {
+  }
+  
+  h1, h2, h3 {
     color: #e6bf83;
-}
-
-h1 {
+  }
+  
+  h1 {
     text-align: center;
-}
-
-img.img {
+  }
+  
+  img.img {
     display: block;
-    margin: 0;
-    width: 200px;
-    height: 200px;
+    margin: 0 auto;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 8px;
-}
-
-hr {
+  }
+  
+  hr {
     border: 1px solid #e6bf83;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-li {
+  }
+  
+  .contact-info, .work-experience, .education {
+    margin-bottom: 20px;
+  }
+  
+  .contact-info div, .work-experience div, .education div {
     margin-bottom: 10px;
-}
-
-ul li {
+  }
+  
+  .date {
+    color: #e6bf83;
+    justify-items: right;
+  }
+  
+  .work-experience, .education {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .work-experience div, .education div {
+    margin-bottom: 20px;
+  }
+  
+  .work-experience h3, .education h3 {
+    margin-bottom: 5px;
+  }
+  
+  .work-experience p, .education p {
+    margin-top: 5px;
+  }
+  
+  .work-experience span, .education span {
     display: block;
-    justify-content: space-between;
-}
-
-ul li span {
-    text-align: center;
-}
-
-p {
-    line-height: 0;
-}
-
-.item {
-    float: right;
-}
+  }
+  
