--- a/homeworks/html-css/week01/Resume/style.css
+++ b/homeworks/html-css/week01/Resume/style.css
@@ -66,4 +66,9 @@ body {
   .work-experience span, .education span {
     display: block;
   }
+
+  .img {
+    height: 200px;
+    width: 200px;
+  }
   
